# classic-sql-vs-BaaS-platform

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
data-generator/: .env.example  Makefile  config.py  pyproject.toml
data-generator/src/: __main__.py  config.py  db_conn.py  generator.py  models.py  schema.py
data-generator/src/bass/: bass_api.py  gen_insert_bass.py  main.js  models.py  req_back4app.py
data-generator/src/db/: gen_insert_db.py  models.py  req_db.py  requests.sql
docs/: spec.md
shch-mysql/src/: 01-create.sql
