[project]
name = "classic-sql-vs-baas-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[tool.mypy]
strict = true
strict_bytes = true
local_partial_types = true
warn_unreachable = true
explicit_package_bases = true
